--- a/lib/projects.html
+++ b/lib/projects.html
@@ -27,13 +27,13 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-            <h2>Friends Fan ?</h2>
+            <h2>Fandom Quiz ?</h2>
             <small>May 2021</small>
             <p>A CLI built with <strong>nodeJs</strong>.
             You can send this to your feiends and find out who knows you well</p>
 
             <a class="link primary-link" href="https://google.com">Live Project</a>
-            <a class="link secondary-link" href="https://github.com/Ankita-22/Fandom-Quiz">View Source</a>
+            <a class="link secondary-link" href="https://github.com/Ankita-22/Fandom-quiz">View Source</a>
         </div>
         </li>
         <li>
