feat:Added few details
Added few details

--- a/lib/blogpost.html
+++ b/lib/blogpost.html
@@ -12,12 +12,12 @@
 
     <header class="hero">
         <h1 class="hero-head">get started with Git and Github </h1>
-        <p>May 31,2021</p>
-        <img class="hero-img" src="/images/g.jpg" alt="hero-img" >
+        <p >May 31,2021</p>
+        <img class="hero-img" src="/images/gith.jpg" alt="hero-img" >
     </header>
 
     <section class="section ">
-        <div class="container container-center">
+        <div class="container container-blog">
             <h2 class="head">What is Git?</h2>
             <p>Git is a system which take care of when,who,what was done in the code
                 basically a book keeping mechanism.
