--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">AadarshBalika</div>
+        <div class="nav-brand">Ankita Panda</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">HOME</a></li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/lib/projects.html">PROJECTS</a></li>
+                <a class="link " href="/lib/projects.html">PROJECTS</a></li>
             <li class="list-item-inline">
-                <a class="link" href="/lib/blogs.html">BLOGS</a></li>
+                <a class="link link-active" href="/lib/blogs.html">BLOGS</a></li>
         </ul>
     </nav>
 
@@ -27,7 +27,7 @@
         <!-- <h2>Read my  <a href="/"> Blogs</a></h2> -->
     </header>
 
-    <section class="section on">
+    <section class="section ow">
         <div class="container container-center">
             <h1>An Intro to Git and GitHub</h1>
             <p>Git and Github is one of the popular tool used as code repository.Helps in write
