--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section ow">
         <div class="container container-center">
             <h1>Projects</h1>
             <p>I want to show case my work thus ,you can see my projects hosted online .</p>
