--- a/lib/projects.html
+++ b/lib/projects.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">AadarshBalika</div>
+        <div class="nav-brand">Ankita Panda</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">HOME</a></li>
             <li class="list-item-inline">
-                <a class="link" href="/lib/projects.html">PROJECTS</a></li>
+                <a class="link link-active" href="/lib/projects.html">PROJECTS</a></li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/lib/blogs.html">BLOGS</a></li>
+                <a class="link " href="/lib/blogs.html">BLOGS</a></li>
         </ul>
     </nav>
     <header class="hero">
@@ -24,21 +24,20 @@
         <!-- <h2>This is your mark 5 assignment <a href="/">Mark 5</a></h2> -->
     </header>
 
-    <ul class="list-non-bullet">
-        <li>
+        <section class="section ow">
             <div class="container container-center">
-            <h2>Fandom Quiz ?</h2>
-            <small>May 2021</small>
+                <h2>Fandom Quiz ?</h2>
+                <small>May 2021</small>
             <p>A CLI built with <strong>nodeJs</strong>.
             You can send this to your feiends and find out who knows you well</p>
 
             <a class="link primary-link" href="https://google.com">Live Project</a>
             <a class="link secondary-link" href="https://github.com/Ankita-22/Fandom-quiz">View Source</a>
-        </div>
-        </li>
-        <li>
+            </div>
+        </section>
+        <section class="section ow">
             <div class="container container-center">
-            <h1>how well do you know me ?</h1>
+                <h2>how well do you know me ?</h2>
             <small>May 2021</small>
             <p>A CLI built with <strong>nodeJs</strong>.
             You can send this to your feiends and find out who knows you well</p>
@@ -46,9 +45,8 @@
             <a class="link primary-link" href="https://google.com">Live Project</a>
             <a class="link secondary-link" href="https://github.com/Ankita-22/KnowMe">View Source</a>
             </div>
-        </li>
-
-    </ul>
+        </section>
+        
 
     <footer class="footer">
         <div class="footer-header">Social media
