docs:made changes in blog
made changes in blog

--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -36,6 +36,24 @@
             <a class="link primary-link" href="/lib/blogpost.html">Read More</a>
         </div>
     </section>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>An Intro to Git and GitHub</h1>
+            <p>Git and Github is one of the popular tool used as code repository.Helps in write
+                and building applications.Git is a system which take care of when,who,what was done in the code
+                basically a book keeping mechanism.</p>
+            <a class="link primary-link" href="/lib/blogpost.html">Read More</a>
+        </div>
+    </section>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>An Intro to Git and GitHub</h1>
+            <p>Git and Github is one of the popular tool used as code repository.Helps in write
+                and building applications.Git is a system which take care of when,who,what was done in the code
+                basically a book keeping mechanism.</p>
+            <a class="link primary-link" href="/lib/blogpost.html">Read More</a>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="footer-header">Social media
