--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I'm familiar with html5,css3,git,Javascript,NodeJs,ReactJs,Web Hosting</p>
+            <p>I'm familiar with HTML5,CSS3,git,Javascript,NodeJs,ReactJs,Web Hosting</p>
         </div>
     </section>
 
