feat:added new feauture
added new feature

--- a/lib/projects.html
+++ b/lib/projects.html
@@ -47,7 +47,28 @@
             </div>
         </section>
         
+        <section class="section ow">
+            <div class="container container-center">
+                <h2>how well do you know me ?</h2>
+            <small>May 2021</small>
+            <p>A CLI built with <strong>nodeJs</strong>.
+            You can send this to your friends and find out who knows you well</p>
 
+            <a class="link primary-link" href="https://google.com">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/Ankita-22/KnowMe">View Source</a>
+            </div>
+        </section>
+        <section class="section ow">
+            <div class="container container-center">
+                <h2>how well do you know me ?</h2>
+            <small>May 2021</small>
+            <p>A CLI built with <strong>nodeJs</strong>.
+            You can send this to your friends and find out who knows you well</p>
+
+            <a class="link primary-link" href="https://google.com">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/Ankita-22/KnowMe">View Source</a>
+            </div>
+        </section>
     <footer class="footer">
         <div class="footer-header">Social media
             <ul class="social-links-list-non-bullet">
