added few details4

--- a/lib/projects.html
+++ b/lib/projects.html
@@ -49,24 +49,25 @@
         
         <section class="section ow">
             <div class="container container-center">
-                <h2>how well do you know me ?</h2>
-            <small>May 2021</small>
-            <p>A CLI built with <strong>nodeJs</strong>.
-            You can send this to your friends and find out who knows you well</p>
+                <h2>Minions Translation</h2>
+            <small>June 2021</small>
+            <p>Webapp with  <strong>Vanilla Javascript</strong>
+            You can send this to your friends and they can use to translate human word to minions language</p>
 
-            <a class="link primary-link" href="https://google.com">Live Project</a>
-            <a class="link secondary-link" href="https://github.com/Ankita-22/KnowMe">View Source</a>
+            <a class="link primary-link" href="https://minionsworld.netlify.app/">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/Ankita-22/Banana-talk">View Source</a>
             </div>
         </section>
         <section class="section ow">
             <div class="container container-center">
-                <h2>how well do you know me ?</h2>
-            <small>May 2021</small>
-            <p>A CLI built with <strong>nodeJs</strong>.
-            You can send this to your friends and find out who knows you well</p>
+                <h2>Groot Show</h2>
+            <small>June 2021</small>
+            <p>Webapp with <strong>Vanilla Javascript</strong>.
+            You can send this to your friends and they can use to translate human word to groot language</p>
 
-            <a class="link primary-link" href="https://google.com">Live Project</a>
-            <a class="link secondary-link" href="https://github.com/Ankita-22/KnowMe">View Source</a>
+
+            <a class="link primary-link" href="https://emgroot.netlify.app/">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/Ankita-22/Groot-show">View Source</a>
             </div>
         </section>
     <footer class="footer">
