--- a/lib/projects.html
+++ b/lib/projects.html
@@ -29,7 +29,7 @@
                 <h2>Fandom Quiz ?</h2>
                 <small>May 2021</small>
             <p>A CLI built with <strong>nodeJs</strong>.
-            You can send this to your friends and find out who knows you well</p>
+            You can send this to your friends and find out who knows F.R.I.E.N.D.S well</p>
 
             <a class="link primary-link" href="https://google.com">Live Project</a>
             <a class="link secondary-link" href="https://github.com/Ankita-22/Fandom-quiz">View Source</a>
