added links to the project

--- a/lib/projects.html
+++ b/lib/projects.html
@@ -31,7 +31,7 @@
             <p>A CLI built with <strong>nodeJs</strong>.
             You can send this to your friends and find out who knows F.R.I.E.N.D.S well</p>
 
-            <a class="link primary-link" href="https://google.com">Live Project</a>
+            <a class="link primary-link" href="https://replit.com/@ankitapanda/Fandom-quiz#index.js">Live Project</a>
             <a class="link secondary-link" href="https://github.com/Ankita-22/Fandom-quiz">View Source</a>
             </div>
         </section>
@@ -42,7 +42,7 @@
             <p>A CLI built with <strong>nodeJs</strong>.
             You can send this to your friends and find out who knows you well</p>
 
-            <a class="link primary-link" href="https://google.com">Live Project</a>
+            <a class="link primary-link" href="https://replit.com/@ankitapanda/Know-Me">Live Project</a>
             <a class="link secondary-link" href="https://github.com/Ankita-22/KnowMe">View Source</a>
             </div>
         </section>
