Added reactjs project

--- a/lib/projects.html
+++ b/lib/projects.html
@@ -70,6 +70,17 @@
             <a class="link secondary-link" href="https://github.com/Ankita-22/Groot-show">View Source</a>
             </div>
         </section>
+        <section class="section ow">
+            <div class="container container-center">
+                <h2>Smiley</h2>
+            <small>June 2021</small>
+            <p>Webapp with  <strong>ReactJS</strong>
+            You can send this to your friends and they can use to se.e the type of smileyes</p>
+
+            <a class="link primary-link" href="https://9e4zk.csb.app/">Live Project</a>
+            <a class="link secondary-link" href="https://codesandbox.io/s/github/Ankita-22/Smiley">View Source</a>
+            </div>
+        </section>
     <footer class="footer">
         <div class="footer-header">Social media
             <ul class="social-links-list-non-bullet">
