Removed blog klink

--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -36,7 +36,7 @@
             <a class="link primary-link" href="/lib/blogpost.html">Read More</a>
         </div>
     </section>
-    <section class="section ow">
+    <!-- <section class="section ow">
         <div class="container container-center">
             <h1>An Intro to Git and GitHub</h1>
             <p>Git and Github is one of the popular tool used as code repository.Helps in write
@@ -53,7 +53,7 @@
                 basically a book keeping mechanism.</p>
             <a class="link primary-link" href="/lib/blogpost.html">Read More</a>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="footer-header">Social media
