--- a/lib/projects.html
+++ b/lib/projects.html
@@ -86,7 +86,7 @@
             <ul class="social-links-list-non-bullet">
                 <li class="list-item-inline"> <a class="link" href="https://github.com/Ankita-22?tab=repositories">github</a> </li>
                 <li class="list-item-inline"><a class="link" href="/">Twitter</a></li>
-                <li class="list-item-inline"><a class="link" href="/">LinkedIn</a></li>
+                <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/ankita-panda-228914174/">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
