--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -58,9 +58,9 @@
     <footer class="footer">
         <div class="footer-header">Social media
             <ul class="social-links-list-non-bullet">
-                <li class="list-item-inline"> <a class="link" href="https://github.com/Ankita-22?tab=repositories">github</a> </li>
+                <li class="list-item-inline"> <a class="link" target="_blank" href="https://github.com/Ankita-22?tab=repositories">github</a> </li>
                 <li class="list-item-inline"><a class="link" href="/">Twitter</a></li>
-                <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/ankita-panda-228914174/">LinkedIn</a></li>
+                <li class="list-item-inline"><a class="link" target="_blank" href="https://www.linkedin.com/in/ankita-panda-228914174/">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
