--- a/lib/projects.html
+++ b/lib/projects.html
@@ -81,6 +81,18 @@
             <a class="link secondary-link" href="https://codesandbox.io/s/github/Ankita-22/Smiley">View Source</a>
             </div>
         </section>
+        <section class="section ow">
+            <div class="container container-center">
+                <h2>Lucky Birthday</h2>
+            <small>June 2021</small>
+            <p>Webapp with <strong>Vanilla Javascript</strong>.
+                Try n see if sum of  digits of your birthday is lucky number or not!!</p>
+
+
+            <a class="link primary-link" href="luckybirthdaygame.netlify.app/">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/Ankita-22/BirthdayLucky">View Source</a>
+            </div>
+        </section>
     <footer class="footer">
         <div class="footer-header">Social media
             <ul class="social-links-list-non-bullet">
