--- a/lib/projects.html
+++ b/lib/projects.html
@@ -89,7 +89,7 @@
                 Try n see if sum of  digits of your birthday is lucky number or not!!</p>
 
 
-            <a class="link primary-link" href="luckybirthdaygame.netlify.app/">Live Project</a>
+            <a class="link primary-link" href="https://luckybirthdaygame.netlify.app/">Live Project</a>
             <a class="link secondary-link" href="https://github.com/Ankita-22/BirthdayLucky">View Source</a>
             </div>
         </section>
